--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,22 @@
 language: c
-
-#os:
-#  - linux
-#  - osx
-
 before_install:
-  # Fix plotting scripts
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 install:
-  - source install.sh
-  - export PYTHONUNBUFFERED=true
-
+- source install.sh
+- export PYTHONUNBUFFERED=true
 script:
-  - export CC="gcc -std=c89"
-  - source deactivate
-  - source activate $python
-  - conda list -e
-  - nosetests
-  - behave --tags ~@skip  # Everything without the tag @skip
+- export CC="gcc -std=c89"
+- source deactivate
+- source activate $python
+- conda list -e
+- nosetests
+- behave --tags ~@skip
 env:
   matrix:
-    - python=2.7  CONDA_PY=27
-    - python=3.3  CONDA_PY=33
-
-after_success:
-  coveralls
-#    - python=3.4  CONDA_PY=34
+  - python=2.7  CONDA_PY=27
+  - python=3.3  CONDA_PY=33
+after_success: coveralls
+notifications:
+  slack:
+    secure: IZCRJLXLs4OCoKZZ6AoeYUNPzdl+Sy1lFk2Cb0SMlfUvUqSSFpGGCAlMHcd+O+YTja5+jyMkWFikWPaAR4QcmkXMtDAX4F/K/cojZxFUcQEg1Ss6GmaKAN0LKVyu0Hxy9uKBGkA5Z0y4lMApEl41r9lUf8ucAgNoGi+NccoqwJg=
